Ability to select multiple options added. Z index fix due to overlapping content issues.

--- a/src/SCSS/core.scss
+++ b/src/SCSS/core.scss
@@ -15,6 +15,7 @@
 
     .results-container {
         width: 100%;
+        z-index: 1030;
         max-height: 50vh;
         overflow: auto;
         position: absolute;
